Supposed Final Touches once I realize how git works

--- a/_posts/2025-01-05-DPD.md
+++ b/_posts/2025-01-05-DPD.md
@@ -1,20 +1,23 @@
 ---
 title: "Introduction to RF Power Amplifier Design and Digital Predistortion"
 date: 2025-01-20 10:00:00 +0000
-categories: [RF Engineering, Power Amplifiers]
+categories: [Electrical Engineering, Radar Design]
 tags: [RF design, DPD, digital predistortion, radar, PCB design, system benchmarking, wireless systems]
 description: >-
   Overview of RF system design fundamentals including power amplifier
   linearization, digital predistortion (DPD), PCB design considerations,
   and system benchmarking techniques used in modern radar and wireless
   communication hardware.
+image:
+  path: /commons/devices-mockup.png
+  lqip: data:image/webp;base64,UklGRpoAAABXRUJQVlA4WAoAAAAQAAAADwAABwAAQUxQSDIAAAARL0AmbZurmr57yyIiqE8oiG0bejIYEQTgqiDA9vqnsUSI6H+oAERp2HZ65qP/VIAWAFZQOCBCAAAA8AEAnQEqEAAIAAVAfCWkAALp8sF8rgRgAP7o9FDvMCkMde9PK7euH5M1m6VWoDXf2FkP3BqV0ZYbO6NA/VFIAAAA
+  alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
-
-<!-- Post Content Starts Here -->
-
-## Overview
+## Overview (TL;DR)
 
 This post introduces the fundamental concepts behind RF power amplifier
 design and digital predistortion (DPD), with a focus on practical
 implementation and real-world system benchmarking…
-
+![](/assets/images/20.png)
+## B
+fefe
