--- a/_posts/2025-04-19-RF Lineup.md
+++ b/_posts/2025-04-19-RF Lineup.md
@@ -30,11 +30,11 @@ A superheterodyne transmitter (Tx) architecture was adopted, and the system was 
 
 To focus on principal mixing products, namely IF_Freq ± LO_Freq—the maximum mixing order was set to 2. Notably, the mixer’s reflection coefficients (S11, S22, S33) were not used. Once configured, the simulation confirmed that the final amplifier stage could achieve the desired 25 mW output at 1.8425 GHz.
 
-![](./assets/img/Lineup/Fig1.png)
+![Fig1]({{ "/assets/img/Lineup/Fig1.png" | relative_url }})
 
 Figure 1: Tx Chain Schematic with specified parameters
 
-![](./assets/img/Lineup/Fig2.png)
+![Fig2]({{ "/assets/img/Lineup/Fig2.png" | relative_url }})
 
 Figure 2: Harmonic Balance Simulation Results
 
@@ -62,7 +62,7 @@ Thus, the total power at the output is about 17.48mW/12.4 dBm which is just sh
 
 The previous section’s RF Transmitter Chain was replicated with a filter built using the Design Wizard on ADS. The specifications were as follows:
 
-![](./assets/img/Lineup/Fig3.png)
+![Fig3]({{ "/assets/img/Lineup/Fig3.png" | relative_url }})
 
 Figure 3: Filter Specifications
 
@@ -70,25 +70,25 @@ It is important to note that with the provided specifications, the filter will g
 
 The new schematic is illustrated below with the new “DA_LCBandpassDT1” component denoting the new “custom” filter.
 
-![](./assets/img/Lineup/Fig4.png)
+![Fig4]({{ "/assets/img/Lineup/Fig4.png" | relative_url }})
 
 Figure 4: Tx Chain Schematic With Custom Filter
 
-![](./assets/img/Lineup/Fig5.png)
+![Fig5]({{ "/assets/img/Lineup/Fig5.png" | relative_url }})
 
 Figure 5: Filter Response Plots
 
 The same procedure was followed with regards to the Harmonic Balance simulation controller. The resulting plots are shown below.
 
-![](./assets/img/Lineup/Fig6.png)
+![Fig6]({{ "/assets/img/Lineup/Fig6.png" | relative_url }})
 
 Figure 6: Plot of New Filter Output, Custom BPF Response & New Filter Output
 
-![](./assets/img/Lineup/Fig7.png)
+![Fig7]({{ "/assets/img/Lineup/Fig7.png" | relative_url }})
 
 Figure 7: Filter Output (w\Connectorized Filter) & (w\Custom BPF)
 
-![](./assets/img/Lineup/Fig8.png)
+![Fig8]({{ "/assets/img/Lineup/Fig8.png" | relative_url }})
 
 Figure 8: Tx Chain Output (w\Connectorized Filter) & (w\Custom BPF)	
  
