--- a/_posts/2025-10-19-SDP_ADRV9026.md
+++ b/_posts/2025-10-19-SDP_ADRV9026.md
@@ -19,9 +19,23 @@ implementation and real-world system benchmarking…
 ##### Step 1: Connecting to the board
 After booting the FPGA board (ADS9-V2EBZ) and turning on the RF board (ADRV9026) the GUI will be allowed to remotely SSH into the linux system present onto the FPGA board through its embedded subroutines \(more on this later \[link should be provided\]\). This connection is established for two different purposes. The device on which the GUI is opened will be used to load configuration settings and send them directly to the board. Once that is done, the user may navigate to the Transmit/Receive sections for utilizing their respective functionalities.
 
+![An image showing Step 1 of setting up the Transceiver Evaluation Software](/assets/img/SDP/Step1.png)
+For our intended purposes we will select the "98_LinkSharing" Preset profile as it fits our use case.
+
+![An image showing Step 2 of setting up the Transceiver Evaluation Software](/assets/img/SDP/Step2.png)
+Make sure Gain Tables are configured correctly for RX. \(Must add explanation\)
+
+![An image showing Step 3 of setting up the Transceiver Evaluation Software](/assets/img/SDP/Step3.png)
+Reference clock field must be checked and confirmed to be 122.88 MHz to ensure proper operation of the evaluation setup.
+
+![An image showing Step 4 of setting up the Transceiver Evaluation Software](/assets/img/SDP/Step4.png)
+
+Once your desired profile is selected, simply press program in the top ribbon to initialize the board with the profile settings.
+![An image showing Step 5 of setting up the Transceiver Evaluation Software](/assets/img/SDP/Step5.png)
+
 ##### Step 2: Tx & Rx
 The following figures provide a step-by-step guide to be able to transmit tones/waveforms and consequently receive them: 
-> Preceding the transmission of any arbitrary waveform besides a Continuous-wave tone is the actual creation of the waveform to be loaded. More details on creating a 5G signal can be found here.
+> Preceding the transmission of any arbitrary waveform besides a Continuous-wave tone is the actual creation of the waveform to be loaded. More details on creating a 5G signal can be found [here](#matlab-files).
 {: .prompt-info }
 
 
@@ -30,6 +44,9 @@ The following figures provide a step-by-step guide to be able to transmit tones/
 For this section, the Ironpython tab will be our first-hand method serial communication between the setup and the computer. The scripts is to be used to load the configuration settings skipping the majority of Step 1.
 
 ### Fully scripted Operation (Only Python for now)
+
+### MATLAB Files
+
 
 ## TO-DO:
 
