Added to _posts

--- a/_posts/2025-10-19-SDP_ADRV9026.md
+++ b/_posts/2025-10-19-SDP_ADRV9026.md
@@ -17,7 +17,7 @@ implementation and real-world system benchmarking…
 ## Utilizing the Transceiver Evaluation Software (TES)
 ### Full GUI Operation
 ##### Step 1: Connecting to the board
-After booting the FPGA board (ADS9-V2EBZ) and turning on the RF board (ADRV9026) the GUI will be allowed to remotely SSH into the linux system present onto the FPGA board through its embedded subroutines \(more on this later \[link should be provided\]\). This connection is established for two different purposes. The device on which the GUI is opened will be used to load configuration settings and send them directly to the board. Once that is done, the user may navigate to the Transmit/Receive sections for utilizing their respective functionalities.
+After booting the FPGA board (ADS9-V2EBZ) and turning on the RF board (ADRV9026) the GUI, and by extension all the .NET assemblies provided by ADI, will be allowed to remotely SSH into the linux system present onto the FPGA board through its embedded subroutines \(more on this later \[link should be provided\]\). This connection is established for two different purposes. The device on which the GUI is opened will be used to load configuration settings and send them directly to the board. Once that is done, the user may navigate to the Transmit/Receive sections for utilizing their respective functionalities.
 
 ![An image showing Step 1 of setting up the Transceiver Evaluation Software](/assets/img/SDP/Step1.png)
 For our intended purposes we will select the "98_LinkSharing" Preset profile as it fits our use case.
@@ -41,9 +41,14 @@ The following figures provide a step-by-step guide to be able to transmit tones/
 
 
 ### Semi-GUI Operation (Ironpython)
-For this section, the Ironpython tab will be our first-hand method serial communication between the setup and the computer. The scripts is to be used to load the configuration settings skipping the majority of Step 1.
+For this section, the Ironpython tab will be our first-hand method serial communication between the setup and the computer. The scripts is to be used to load the configuration settings skipping the majority of Step 1. The proceeding steps will be assumed as was done in the previous section.
+
+> Must add images
+{: .prompt-danger }
+
 
 ### Fully scripted Operation (Only Python for now)
+In this way of operating the system, the user will assume full control of communication from the auto-generated Ironpython code + other code to utilize the other functionalities of the system. Configuration will follow as in the previous section, whereas, the desired use-case of the user will be communicated through the CLI \(or by extension a new GUI utilizing the same subroutines a little more efficiently\).
 
 ### MATLAB Files
 
